CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH")

LINK_DIRECTORIES("${Torch_INSTALL_LIB}")
add_definitions(-Wl,-as-needed)

SET(src dbscan.cpp ${PROTO_SRCS})

FILE(GLOB luasrc *.lua)

ADD_LIBRARY(dbscan MODULE ${src})
TARGET_LINK_LIBRARIES(dbscan TH)

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(dbscan PROPERTIES
  PREFIX "lib"
  IMPORT_PREFIX "lib")
    
INSTALL(TARGETS dbscan
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/dbscan")
